[package]
name = "cglue-gen"
version = "0.3.1"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "FFI safe code generation for making plugins and C-compatible libraries"
license = "MIT"
documentation = "https://docs.rs/cglue-gen"
repository = "https://github.com/h33p/cglue"
keywords = [ "cglue", "abi", "ffi", "cbindgen", "macro" ]
categories = [ "api-bindings", "accessibility", "parsing" ]
readme = "../README.md"

[dependencies]

[features]
default = []
rust_void = []
unstable = []
layout_checks = []
task = []
futures = ["task"]
