[package]
name = "cglue"
version = "0.3.4"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "FFI safe abstractions for making plugins and C-compatible libraries"
license = "MIT"
documentation = "https://docs.rs/cglue"
repository = "https://github.com/h33p/cglue"
keywords = [ "cglue", "abi", "ffi", "cbindgen", "macro" ]
categories = [ "api-bindings", "accessibility", "parsing" ]
readme = "../README.md"

[dependencies]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
pollster = "0.2"

[features]
default = ["std"]
std = ["no-std-compat/std", "tarc/std"]
rust_void = ["cglue-macro/rust_void"]
unstable = ["cglue-macro/unstable", "try_default"]
task = ["cglue-macro/task"]
layout_checks = ["cglue-macro/layout_checks", "abi_stable"]
futures = ["_futures", "task", "cglue-macro/futures"]

[package.metadata.docs.rs]
features = ["std", "task", "futures"]
